--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,10 @@ footer ul{
         font-size: medium;
     }
     .heroSection .content{
-        padding-top:100px;
+        padding-top:130px;
+    }
+    .heroSection p{
+        font-size:18px;
     }
     .heroSection h1{
         font-size:35px;
@@ -259,7 +262,7 @@ footer ul{
     }
     .heroSection img{
         width:100%;
-        height:75%;
+        height:65%;
     }
     .heroSection .title{
         text-align: center;
